[package]
name = "Raycaster-rs"
description = "raycasting engine like doom"
repository = "https://github.com/Euclidae/raycaster-rs"
documentation = "https://docs.rs/sdl3/latest/sdl3/"
version = "0.2.0"
license = "MIT"
authors = [
    "Euclidae"
]
keywords = ["graphics", "engine", "cross-platform", "input", "audio"]
categories = ["rendering", "api-bindings", "game-engines", "multimedia"]
readme = "README.md"
edition = "2024"  

[dependencies]
sdl3 = { version = "0.14.33", features = ["image", "build-from-source"] } 
